correcao no login e cadastro de admin e cliente, validacao via jwt
